configured compose file. just need to fix volume creation

--- a/is_gym_eshop/Eshop.Web/appsettings.json
+++ b/is_gym_eshop/Eshop.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ShopD;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=DESKTOP-4QCTE4I;Initial Catalog=GymDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
