--- a/is_gym_eshop/docker-compose.yml
+++ b/is_gym_eshop/docker-compose.yml
@@ -6,15 +6,17 @@ networks:
 services:
   sql_server:
     image: mcr.microsoft.com/mssql/server
+    user: root
     environment:
       ACCEPT_EULA: "Y"
       MSSQL_SA_PASSWORD: "marko@123"
+      MSSQL_PID: Developer
     ports:
       - "1433:1433"
     networks:
       - eshop_network
     volumes:
-      - ./mssql_data:/var/opt/mssql/data
+      - mssql_data:/var/opt/mssql/data
 
   eshop_web:
     image: eshop.web
