--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: ["KIII"]
+    branches: ["main"]
   pull_request:
-    branches: ["KIII"]
+    branches: ["main"]
 
 concurrency:
   group: build-and-release
@@ -15,6 +15,11 @@ jobs:
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout Code
         uses: actions/checkout@v2
         with:
