--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -28,6 +28,8 @@ jobs:
       - name: Build and push Docker Image
         uses: docker/build-push-action@v2
         with:
+          context: .  
+          file: ./is_gym_eshop/Eshop.Web
           image: marki4/kiii
           registry: docker.io 
           username: ${{ secrets.DOCKERHUB_USERNAME }}
