--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -28,5 +28,6 @@ jobs:
       - name: Build and push Docker Image
         uses: docker/build-push-action@v2
         with:
-          context: ./is_gym_eshop/Eshop.Web  
-          image: marki4/kiii
+          context: ./is_gym_eshop/Eshop.Web
+          push: true  
+          tags: marki4/kiii
