--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -13,19 +13,21 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+        with:
+          # Full git history is needed to get a proper list of changed files within `super-linter`
+          fetch-depth: 0
+      - name: Set up QEMU
+        uses: docker/setup-qemy-action@v1
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Checkout Code
-        uses: actions/checkout@v3
-        with:
-          # Full git history is needed to get a proper list of changed files within `super-linter`
-          fetch-depth: 0
       - name: Build and push Docker Image
         uses: docker/build-push-action@v2
         with:
-          context: ./is_gym_eshop/Eshop.Web
-          push: true  
-          tags: marki4/kiii:latest
+          context: .
+          file: ./is_gym_eshop/Eshop.Web/Dockerfile
+          push: true
