--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -31,7 +31,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./is_gym_eshop
+          context: ./is_gym_eshop/Eshop.Web
           push: true
           tags: marki4/kiii:latest
       - name: Image digest
