--- a/is_gym_eshop/Eshop.Web/Dockerfile
+++ b/is_gym_eshop/Eshop.Web/Dockerfile
@@ -1,4 +1,3 @@
-
 FROM mcr.microsoft.com/dotnet/aspnet:3.1 AS base
 WORKDIR /app
 EXPOSE 80
@@ -6,7 +5,10 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:3.1 AS build
 WORKDIR /src
-COPY .
+COPY ["Eshop.Web/Eshop.Web.csproj", "Eshop.Web/"]
+COPY ["Eshop.Domain/Eshop.Domain.csproj", "Eshop.Domain/"]
+COPY ["Eshop.Service/Eshop.Service.csproj", "Eshop.Service/"]
+COPY ["Eshop.Repository/Eshop.Repository.csproj", "Eshop.Repository/"]
 RUN dotnet restore "Eshop.Web/Eshop.Web.csproj"
 COPY . .
 WORKDIR "/src/Eshop.Web"
