--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -22,16 +22,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Checkout Code
-        uses: actions/checkout@v2
-        with:
-          # Full git history is needed to get a proper list of changed files within `super-linter`
-          fetch-depth: 0
       - name: Build and push Docker Image
         id: docker_build
         uses: docker/build-push-action@v5
         with:
-          context: "{{defaultContext}}:/is_gym_eshop"
+          context: "{{defaultContext}}:/is_gym_eshop/Eshop.Web"
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/kiii:latest
       - name: Image digest
