--- a/database.yaml
+++ b/database.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: eshop-web-config
+  name: eshop-web-mssql-config
   namespace: kiii
 data:
-  DB_HOST: sql_server
-  DB_NAME: GymAPP
-  DB_SA_PASSWORD: marko@123
+  ACCEPT_EULA: "Y"
+  MSSQL_SA_PASSWORD: "password"
+  MSSQL_PID: Developer
 ---
 apiVersion: v1
 kind: Secret
@@ -15,7 +15,7 @@ metadata:
   namespace: kiii
 type: Opaque
 data:
-  SA_PASSWORD: bWFya28rMTIz
+  password: cG9zdGdyZXM=
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -60,7 +60,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: sql-server-secret
-                  key: marko@123
+                  key: password
           ports:
             - containerPort: 1433
               name: sql-server-port
